continuando os testes